assets/css/style.css
/*Root Elements*/
:root{
    --diamond: #c5fcff;
    --hex: #e4bc7f;
    --brown: rgb(116, 52, 24);
    --white: rgb(255,255,255);
    --black: rgb(0, 0, 0);
    --outer-space: #33393f;
    --bright-turquoise: #2aefcb;
    --gin: #e0eae4;
    --blue: rgb(169, 206, 238);
    --grey:rgba(233, 233, 233, 0.942);
    --skyBlue: rgb(225, 235, 244);

}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

.navbar-end {
    text-decoration: none; 
    color: #c5fcff; 
    padding: 5px 10px; 
    border-radius: 5px; 
    transition: background-color 0.3s;
    font-size: bolder;

}

#nav-links a:hover {
    color: #c5fcff;
}

.header-2 .navbar{
    background-color: rgb(227, 187, 128);
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.navbar-item{
    text-align: center;
    color:black;
    padding: 1.0rem;
    font-size: 1.0rem;
    display: flex;
    align-items: center;
}

.search-form {
    float: right;
    padding: 6px 10px;
   margin-right: 16px;
   font-size: 17px;
   cursor: pointer;
   height: 40px;
   border-radius: 10px;
  
}

.search-form input[type="search"]{
    background: whitesmoke;
    width: 30vw;
    margin-left: 2rem;
    font-size: 0.9rem;
    color: hsl(252, 30%, 17%);
    border-radius: 5px;
    box-sizing: border-box;
    height: 35px;
    
}
.search-form input[type="search"]:hover {
    box-shadow: 0 2px 5px #33393f;
}

#search-btn {
    display: inline-block;
}


#quote-container {
    /*display: flex;*/
    flex-direction: column;
    align-items: center;
    text-align: center;
}

#quote {
    quotes: "“" "”";
    margin: 0;
    color: black;
    text-align: center;
    font-size: 26px;
    padding: 25px;
    font-weight: 500;
    position: relative;
    background-color:rgba(233, 233, 233, 0.942);;
  
    &::before,
    &::after {
      content: open-quote;
      font-size: 2.4em;
      color: aqua;
      position: absolute;
      font-family: Georgia, serif;
      top: 50%;
      transform: translateY(-50%);
    }
  
    &::before {
      left: 0;
      margin-left: 350px; 
    }
  
    &::after {
      content: close-quote;
      right: 0;
      margin-right: 350px;
      bottom: 3px;
    }
}

h1 {
    display: inline; 
    margin: 0; 
    font-weight: bold;
}

.fade-in-text {
    animation: color-change 5s infinite;
}

@keyframes color-change {
    0% {color:grey;}
    25% {color: aqua;}
    50% {color: #e4bc7f;}
    75% {color: rgb(118, 77, 32);}
    100% {color:plum;}
}

.hero {
    height: 700px;
    width:100%;
    margin: 0;
    background-image: url("../images/img_03.png");
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
    background-position-y: -25px;
}

.text {
    font-size: 26px;
    font-weight: 500;
    position:inherit;
    text-decoration:none;
    font-family:  Georgia, serif;
    font-weight: bold;
    color: brown;
    margin-top: -80px;
    padding-left: 50px;
}

/* Main Section */

main {
    width: 96%;
    margin: 2rem auto;
}

.code-block {
    background-size: cover;
}

.row {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    /*margin-left: 2.0rem;*/
    /*margin-right: -2.0rem;*/
    /*margin: 0 auto;*/
    position: relative;
    margin-top: -40px;
}

.justify-center {
    justify-content: center;
}

.card-column {
    flex: 1 0 100%;
    padding: 1.5rem;
    transition: flex-basis 500ms linear;
    margin-bottom: 1.5rem;
    width: 80%;
}

.code-card {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    min-height: 100%;
    padding: 2rem;
    /*color: var(--heliotrope);*/
    border: 2px solid var(--white);
    outline-offset: -2px;
    transition: all 0.5s ease-in-out;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}

.code-card .card-header {
    position: relative;
    margin: -4rem 0 1.5rem 0;
    padding: 0.5rem 1rem;
    background-color: var(--skyBlue);
    color: var(--black);
    border: 2px solid var(--gin);
    border-radius: 8px;
    transition: all 0.5s ease-in-out;
    justify-content: center;
    font-weight: bold;
    color:var(--outer-space);
}

.code-card:hover,
  .code-card:hover .card-header {
    box-shadow: inset 0px 0px 8px var(--outer-space), 0 0 15px var(--outer-space);
}

.card-body {
    flex-grow: 1;
}

.card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 8px;
}

.code-card .code-block {
    flex-grow: 1;
}

.code-card pre {
    white-space: pre-wrap;
    overflow: auto;
    tab-size: 4;
    padding: 1.2rem 1rem;
    color: var(--gin);
    border-radius: 8px;
    background-image: linear-gradient(
      rgb(206, 211, 215) 0%,
      rgba(253, 253, 253, 0.942) 100%
    );
    display: flex;
    align-items: center;
}

.code-card pre:active {
    user-select: all;
}

.card-column {
    flex: 2 0 33.333%;
    max-width: 33.333%;
    margin-bottom: 1.5rem;
    box-sizing: border-box;
    height: 15em;
}

@media (max-width: 768px) {
    .card-column {
        flex: 1 0 100%;
        max-width: 100%;
    }
}

/* Footer Section */
.footer {
    margin: 0;
    padding: 0;
    background-color: black;
    color: white;
    font-family: Georgia, 'Times New Roman', Times, serif;
}

.footer-content {  
    width: 100%;
    max-width: 1320px; 
    margin: 0 auto;
    padding-top: 40px; 
    background-color: black;
}

.footer-widget {
    margin: 0px 40px;
    display: flex;
    justify-content:space-evenly;
    align-items: center; 
    box-sizing: border-box; 
}

.image {
    max-width: 200px;     
    
}

.email-form {
    align-items: center; 
    text-align: center; 
    max-width: 600px;
    margin: 0 auto; 
    width: 60%;
}

.email-form h3 {
    font-size: 17px;
    font-weight: bold;
    margin-bottom: 15px; 
}

.email-form input {
    width: 100%;
    margin-bottom: 10px; 
    height: 40px;
    border-radius: 5px;
}

.email-form input:hover {
    box-shadow: 0 2px 5px rgba(233, 233, 233, 0.942);
    background-color:aliceblue;

}

#footer-email-btn {
    width:20%;
    height: 30px;
    font-weight: bold;
}

#footer-email-btn:hover {
    box-shadow: 0 2px 5px rgba(233, 233, 233, 0.942);
    background-color:#e4bc7f;
}

#footer-email {
    text-align:center;
}

.contact-us{
    margin: 0px 30px;
    text-align: center;
}

.links a {
    color: white;
}

.links a:hover {
    color:var(--hex);
}

.follow-us{
    margin-left: 20px;
}
.follow-us a {
    text-decoration: none;
    padding: 10px;
    margin: 10px;
    border-radius: 50%;
}

.follow-us a i {
    font-size: 2.3em;
    color: white;
    opacity: 0.9;
    margin: 0.5px;
}

.follow-us h2 {
    font-size: 17px;
    font-weight: bold;
    text-align: center;
    margin-bottom: 30px;
    margin-top:15px;
}

p{
    text-align: center;
}

/* modal style */
.delete{
    position: absolute; right: 10px; top: 10px;
    background-color: red;
}

.card-author{
    color: black;
    font-weight: bold;
    font-size: 15px;
}

.result-body{
    background-color: lightcyan;
}

